styles.css
:root {
    font-size: 8px;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

html, body {
    height: 100vh;
    width: 100vw;
}

* {
    margin: 0;
    border: 0;
    padding: 0;
    box-sizing: border-box;
    font-weight: 100;
    list-style: none;
}

body {
    display: grid;
    grid-template: 1fr 3fr / 1fr 3fr;
    grid-template-areas: 
    "side nav"
    "side cont";

    overflow-x: hidden;
    overflow-y: auto;
}

#sidebar {
    grid-area: side;
    background: rgb(14, 116, 212);
}

.container {
    width: 100%;

    display: flex;
    flex-direction: column;
    gap: 5rem;

    padding: 3rem;
    overflow: hidden;
}


/* media queries */
@media screen and (max-width: 1200px) {
    :root {
        font-size: 7.5px;
    }
}

@media screen and (max-width: 1107px) {
    :root {
        font-size: 6px;
    }
}

@media screen and (max-width: 888px) {
    .dashboard-icon {
        margin: auto;
    }

    .dashboard-title {
        display: none;
    }

    .widgets > h1 {
        display: none;
    }

    .widgets {
        margin-bottom: 1rem;
        text-align: center;
    }

    .widgets-icons {
        margin: auto;
    }

    :root {
        font-size: 12px;
    }

    .container {
        align-items: center;
        padding-left: 0;
        padding-right: 0;
    }

    .nav-up-one > svg {
        display: none;
    }

    .nav-up-one > input[type='text'] {
        width: 100%;
        height: 2rem;
        border-radius: 1rem;
    }
}

@media screen and (max-width: 457px) {
    :root {
        font-size: 10px;
    }

    .nav-up-one > input[type='text'] {
        width: 100%;
        height: 4rem;
        border-radius: 2rem;
    }

    .nav-up-two > svg, .nav-up-two > h1 {
        display: none !important;
    }
}

@media screen and (max-width: 368px) {
    :root {
        font-size: 8px;
    }
}



.dashboard, #widgets1, #widgets2 {
    width: 100%;
}

.dashboard:hover, .widgets:hover {
    cursor: pointer;
}

.widgets:hover {
    background-color: rgb(12, 101, 184);
}

.dashboard {
    display: flex;
    align-items: center;
    gap: 1rem;
}

.dashboard-title {
    font-size: 3rem;
    font-weight: 600;
    color: white;
}

.dashboard-icon {
    height: 7rem;
    aspect-ratio: auto;
    fill: white;
}


.widgets {
    display: flex;
    align-items: center;
    gap: 2rem;
    padding: 0.5rem;
}

.widgets > h1{
    font-size: 3rem;
    font-weight: 600;
    color: white;
}

.widgets-icons {
    height: 3rem;
    aspect-ratio: auto;
    fill: white;
}



#navbar {
    grid-area: nav;
    background: pink;
}

.nav-icons {
    height: 3rem;
    aspect-ratio: auto;
    fill-opacity: black;
}

.nav-up {
    display: flex;
    gap: 2rem;

    margin: 2rem
}

.nav-up-one {
    flex: 2;

    display: flex;
    align-items: center;
    gap: 2rem
}

.nav-up-two {
    flex: 1;

    display: flex;
    align-items: center;
    gap: 3rem
}

input[type='text'] {
    width: 75%;
    height: 4rem;
    border-radius: 2rem;
    background-color: rgb(214, 214, 214);
    padding: 1rem;
}

input[type='text']:focus {
    border: 3px solid rgb(155, 155, 155);
    outline: none;
}

img[alt="pfp"] {
    width: 50px;
    height: 50px;
    object-fit: cover;
    object-position: 0% 0%;
    border-radius: 50%;
}

img[alt="pfp"] ~ h1 {
    display: inline;
    font-weight: 600;
    font-size: 15px;
}

#content {
    grid-area: cont;
    background: lightblue;
}

